fix home icon colors for dark mode

--- a/css/styles.css
+++ b/css/styles.css
@@ -11,18 +11,23 @@
     --text-color: var(--light-text-color);
     --video-shadow: var(--light-video-shadow);
     --mobile-shadow: 0 0 20px 5px var(--light-mobile-shadow);
+    --home-icon-filter: var(--light-home-icon-filter);
 
     /* Light mode theme */
     --light-background-color: #F7FAFC;
     --light-text-color: black;
     --light-video-shadow: 0px -17px 30px 2px var(--subtext-color), 0px 0px 30px 2px var(--subtext-color);
     --light-mobile-shadow: 0 0 30px 5px var(--subtext-color);
+    --light-home-icon-filter: none;
+
 
     /* Dark mode theme */
     --dark-background-color: #292929;
     --dark-text-color: #E1E1E1;
     --dark-video-shadow: 0;
     --dark-mobile-shadow: 0;
+    /* Get filter from hex color here https://codepen.io/sosuke/pen/Pjoqqp */
+    --dark-home-icon-filter: invert(90%) sepia(84%) saturate(32%) hue-rotate(242deg) brightness(108%) contrast(76%);
 }
 
 body {
